using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class StringHolder
{
    public const string GameplaySceneName = "SampleScene";
    public const string MainMenuSceneName = "MainMenu";
    public const string MoveInputAnimParam = "MoveInput";
    public const string IsFallingAnimParameter = "IsFalling";
    public const string JumpTriggerAnimParameter = "JumpTrigger";

    public const string IsRollingAnimParameter = "IsRolling";

}
